--- a/index.html
+++ b/index.html
@@ -339,6 +339,56 @@
         }
         /* --- FIM DOS ESTILOS DO FAQ --- */
 
+        /* --- NOVO: ÍCONE DE MOUSE FLUTUANTE --- */
+        .mouse-icon {
+            width: 30px;
+            height: 50px;
+            border: 2px solid #f1f5f9; /* slate-100 (cor do cursor) */
+            border-radius: 15px;
+            position: relative;
+            animation: bobbing 2s infinite ease-in-out;
+            opacity: 0.7;
+        }
+
+        .mouse-wheel {
+            width: 4px;
+            height: 8px;
+            background-color: #f1f5f9; /* slate-100 */
+            border-radius: 2px;
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: mouse-scroll 2s infinite ease-in-out;
+        }
+
+        /* Animação flutuante (para cima e para baixo) */
+        @keyframes bobbing {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(10px);
+            }
+        }
+
+        /* Animação da rodinha do mouse */
+        @keyframes mouse-scroll {
+            0% {
+                opacity: 0;
+                top: 10px;
+            }
+            50% {
+                opacity: 1;
+                top: 15px;
+            }
+            100% {
+                opacity: 0;
+                top: 20px;
+            }
+        }
+        /* --- FIM DO ÍCONE DE MOUSE --- */
+
     </style>
 </head>
 <body class="text-gray-800">
@@ -450,6 +500,14 @@
                 QUERO ACESSAR O MÉTODO COMPLETO
             </a>
             <p class="text-gray-300 mt-4 text-sm">Vagas limitadas. Clique no botão acima.</p>
+
+            <!-- NOVO: Ícone de Mouse Flutuante -->
+            <div class="absolute bottom-8 left-1/2 -translate-x-1/2">
+                <div class="mouse-icon">
+                    <div class="mouse-wheel"></div>
+                </div>
+            </div>
+
         </div>
     </section>
 
