--- a/index.html
+++ b/index.html
@@ -501,11 +501,10 @@
             </a>
             <p class="text-gray-300 mt-4 text-sm">Vagas limitadas. Clique no botão acima.</p>
 
-            <!-- NOVO: Ícone de Mouse Flutuante -->
-            <div class="absolute bottom-8 left-1/2 -translate-x-1/2">
-                <div class="mouse-icon">
-                    <div class="mouse-wheel"></div>
-                </div>
+            <!-- Ícone de Mouse Flutuante (Corrigido) -->
+            <!-- Movido para o fluxo normal do documento, centralizado com mx-auto e com margem superior mt-12 -->
+            <div class="mouse-icon mx-auto mt-12">
+                <div class="mouse-wheel"></div>
             </div>
 
         </div>
